# pogos

./: .gitignore  Cargo.toml  Makefile  README.md  bochsrc_debug.bxrc  bochsrc_release.bxrc
.cargo/: config.toml
src/: lib.rs
src/arch/x86_64/: boot32.asm  boot64.asm  grub.cfg  linker.ld  multiboot_header.asm
src/memory/: heap_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/serial/: mod.rs
src/vga_buffer/: mod.rs
src/x86_64/: bitflags.rs  mod.rs
src/x86_64/instructions/: memory.rs  mod.rs  port.rs  random.rs  segmentation.rs  tables.rs  tlb.rs
src/x86_64/registers/: control_regs.rs  mod.rs  msr.rs
src/x86_64/structures/: gdt.rs  idt.rs  mod.rs  tss.rs
